--- a/conf/modeling.yaml
+++ b/conf/modeling.yaml
@@ -1,5 +1,5 @@
 model:
-  model_id: "jinaai/jina-embeddings-v2-base-code"
+  model_id: &id "jinaai/jina-embeddings-v2-base-code"
   fine_tuning:
     full:
       layers: 2 #indicates the num of layers(last layers) to be trained. {0->no layers -1->all layers}
@@ -20,13 +20,14 @@ model:
 loss:
   name: "InfoNCE"
   loss_args:
-    memory_bank_size: 65536
+    memory_bank_size: 1024
     embedding_dim: 768
     temperature: 0.07
 optimizer:
   optimizer:
     name: "AdamW"
     optimizer_args:
+      lr: 1e-4
       weight_decay: 0.01
       betas: [0.9, 0.999]
   scheduler:
@@ -38,3 +39,9 @@ optimizer:
   warmup:
     warmup_steps: 100 # or warmup_epochs
     start_factor: 1/3
+
+data:
+  train_dataset:
+    tokenizer_id: *id
+    file_paths:
+      - "/teamspace/studios/this_studio/semantic_code_search/input/python/train.jsonl"
